# formula1-racing-analysis

./: README.md
clients/: pyproject.toml
clients/src/config/: api_configs.py  session_config.py
clients/src/models/: car.py  driver.py  pit.py  position.py  race_control.py  session.py
clients/src/readers/: cars.py  drivers.py  pit.py  position.py  race_control.py  sessions.py
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
infra/components/aks/: aks_component.py
infra/components/network/: network_component.py
